@@ -413,10 +413,10 @@ bool Units::isTamable(df::unit *unit) {
     CHECK_NULL_POINTER(unit);
     if (isInvader(unit))
         return false;
+    auto caste = getCasteRaw(unit->race, unit->caste);
 
-    auto caste = df::creature_raw::find(unit->race)->caste.at(unit->caste);
-    return caste->flags.is_set(caste_raw_flags::PET)
-        || caste->flags.is_set(caste_raw_flags::PET_EXOTIC);
+    return caste && (caste->flags.is_set(caste_raw_flags::PET) ||
+        caste->flags.is_set(caste_raw_flags::PET_EXOTIC));
 }
 
 bool Units::isDomesticated(df::unit *unit) {
@@ -479,9 +479,10 @@ bool Units::isGelded(df::unit *unit) {
 
 bool Units::isEggLayer(df::unit *unit) {
     CHECK_NULL_POINTER(unit);
-    auto caste = df::creature_raw::find(unit->race)->caste.at(unit->caste);
-    return caste->flags.is_set(caste_raw_flags::LAYS_EGGS)
-        || caste->flags.is_set(caste_raw_flags::LAYS_UNUSUAL_EGGS);
+    auto caste = getCasteRaw(unit->race, unit->caste);
+
+    return caste && (caste->flags.is_set(caste_raw_flags::LAYS_EGGS) ||
+        caste->flags.is_set(caste_raw_flags::LAYS_UNUSUAL_EGGS));
 }
 
 bool Units::isEggLayerRace(df::unit *unit) {
@@ -924,6 +925,16 @@ df::unit *Units::create(int16_t race, int16_t caste) {
     return (*f)(race, caste);
 }
 
+df::caste_raw *Units::getCasteRaw(int race, int caste) {
+    auto creature = df::creature_raw::find(race);
+    return creature ? vector_get(creature->caste, caste) : NULL;
+}
+
+df::caste_raw *Units::getCasteRaw(df::unit *unit) {
+    CHECK_NULL_POINTER(unit);
+    return getCasteRaw(unit->race, unit->caste);
+}
+
 int Units::getPhysicalAttrValue(df::unit *unit, df::physical_attribute_type attr) {
     auto &aobj = unit->body.physical_attrs[attr];
     int value = max(0, aobj.value - aobj.soft_demotion);
@@ -959,11 +970,7 @@ int Units::getMentalAttrValue(df::unit *unit, df::mental_attribute_type attr) {
 }
 
 bool Units::casteFlagSet(int race, int caste, df::caste_raw_flags flag) {
-    auto creature = df::creature_raw::find(race);
-    if (!creature)
-        return false;
-
-    auto craw = vector_get(creature->caste, caste);
+    auto craw = getCasteRaw(race, caste);
     return craw ? craw->flags.is_set(flag) : false;
 }
 
@@ -1350,11 +1357,7 @@ int Units::computeMovementSpeed(df::unit *unit)
     // Base speed
     int speed = 0;
     /*
-    auto creature = df::creature_raw::find(unit->race);
-    if (!creature)
-        return 0;
-
-    auto craw = vector_get(creature->caste, unit->caste);
+    auto craw = getCasteRaw(unit->race, unit->caste);
     if (!craw)
         return 0;
 
