@@ -47,10 +47,8 @@
 #include "df/building_wellst.h"
 
 #include "df/caste_raw.h"
-#include "df/caste_raw.h"
 #include "df/color_modifier_raw.h"
 #include "df/construction.h"
-#include "df/creature_raw.h"
 #include "df/creature_raw.h"
 #include "df/descriptor_color.h"
 #include "df/descriptor_pattern.h"
